# parthenon

./: .cache  .env  .gitignore  README.md  app.py  download_from_spotify.py  helper.py  jazz_audio_transformation.py  lofi_audio_transformation.py  m.py  main.py  pyproject.toml  requirements.txt
static/: styles.css
templates/: index.html  library.html  play.html  playlist.html
venv_spleeter/: pyvenv.cfg
venv_spleeter/Scripts/: activate  activate.bat
