[project]
name = "my_project"
version = "0.1.0"
description = "A sample project"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
readme = "README.md"
license = { text = "MIT" }

# Specify Python version requirement
requires-python = "==3.11*"

[tool.poetry.dependencies]
python = "^3.11"
