[project]
name = "my-python-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "Flask==3.1.2",
    "librosa==0.11.0",
    "numpy==1.26.4",
    "pedalboard==0.9.19",
    "python-dotenv==1.2.1",
    "soundfile==0.13.1",
    "spotipy==2.25.1",
    "torch==2.9.1",
    "torchaudio==2.9.1"
]